fix: [PD-302] last gender field spacing issue

--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -475,7 +475,6 @@ main {
         &_isArabic {
           &:last-child {
             width: 45% !important;
-            margin-right: 15px;
           }
         }
 
